--- a/playbook.yml
+++ b/playbook.yml
@@ -1,1 +1,10 @@
 ---
+
+- hosts: RedHat
+  remote_user: ansible
+  become: yes
+  become:method: sudo
+
+  roles:
+  - apache-RedHat
+    when: ansible_facts['os_family']=='RedHat'
