--- a/playbook.yml
+++ b/playbook.yml
@@ -1,10 +1,9 @@
 ---
-
 - hosts: RedHat
   remote_user: ansible
   become: yes
-  become:method: sudo
+  become_method: sudo
 
   roles:
-  - apache-RedHat
-    when: ansible_facts['os_family']=='RedHat'
+  - role: apache-RedHat
+    when: ansible_facts['os_family'] == "RedHat"
