--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: RedHat
+- hosts: RedHat Debian
   remote_user: ansible
   become: yes
   become_method: sudo
@@ -7,3 +7,5 @@
   roles:
   - role: apache-RedHat
     when: ansible_facts['os_family'] == "RedHat"
+  - role: apache-Debian
+    when: ansible_facts['os_family'] == "Debian"
